--- a/multi-app-pipeline/Jenkinsfile
+++ b/multi-app-pipeline/Jenkinsfile
@@ -1,42 +1,53 @@
+// groovylint-disable CompileStatic
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.6.3-jdk-8-alpine'
-        }
-    }
+    agent any 
     stages {
-       stage('Checkout') {
+        stage('Clone Repo')
+        {
             steps {
-                sh 'git clone'
-                sh 'git clone https://github.com/royrishwanth/Jenkins-cicd.git' 
+                echo 'Cloning the repository'
+                sh 'ls -R'
             }
         }
-        stage('Build') {
-            steps {
-                sh 'cd java && mvn clean package'
+        stage('Build')
+        agent {
+            docker {
+                image 'maven:3.6.3-jdk-8-alpine'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
+        steps {
+            echo 'Building the application'
+            dir('multi-app-pipeline/java') {
+                sh 'mvn clean package'
             }
         }
     }
+        stage('Test java app') {
+            agent {
+                docker {
+                    image 'maven:3.6.3-jdk-8-alpine'
+                }
+            }
+            steps {
+                echo 'Running tests for the Java application'
+                dir('multi-app-pipeline/java') {
+                    sh 'mvn test'
+                }
+            }
+        }
 
-    agent {
-        docker {
-            image 'node:16-alpine'
-        }
-    }
-    stages {
-        stage('checkout') {
-            steps {
-                sh 'git clone https://github.com/royrishwanth/Jenkins-cicd.git'
+        stage ('Build NODE APP') {
+            agent {
+                docker {
+                    image 'node:14-alpine'
+                }
             }
-        }
-        stage('Build') {
             steps {
-                sh 'npm install'
+                echo 'Building the Node.js application'
+                dir('multi-app-pipeline/node') {
+                    sh 'npm install'
+                    sh 'node app.js'
+                }
             }
         }
 }
