--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -33,17 +33,17 @@ pipeline {
         stage('Build and Push Docker Image') {
                 environment {
                     DOCKER_IMAGE = 'royrishwanth/java-ci-cd-app:$BUILD_NUMBER'
-                    REGISTRY_CREDENTIALS = credentials('docker-cred)')
+                    REGISTRY_CREDENTIALS = credentials('docker-cred')
                 }
                 steps {
-                    sh 'cd ultimate-pipeline/java && docker build -t $DOCKER_IMAGE .'
-                    def dockerImage = docker.image("${DOCKER_IMAGE}")
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-cred')
-                    {
-                        dockerImage.push()
+                    script {
+                        sh 'cd ultimate-pipeline/java && docker build -t $DOCKER_IMAGE .'
+                        def dockerImage = docker.image("${DOCKER_IMAGE}")
+                        docker.withRegistry('https://index.docker.io/v1/', REGISTRY_CREDENTIALS) {
+                            dockerImage.push() }
                     }
                 }
-        }
+            }
         stage('Update Deplyment File')
         {
             environment {
@@ -51,19 +51,18 @@ pipeline {
                 GIT_USER_NAME = 'royrishwanth'
             }
             steps {
-                withCredentials([string(credentialsid: 'GITHUB_TOKEN', variable: 'GITHUB_TOKEN')]) {
+                withCredentials([string(credentialsId: 'GITHUB_TOKEN', variable: 'GITHUB_TOKEN')]) {
                     sh '''
                         git config user.email "royrishwanth@gmail.com"
                         git config user.name "Rishwanth Kothapalli"
-                        BUILD_NUMBER=$(BUILD_NUMBER)
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" k8-manifests/deployment.yml
+                        BUILD_NUMBER=\$(BUILD_NUMBER)
+                        sed -i "s/replaceImageTag/\${BUILD_NUMBER}/g" k8-manifests/deployment.yml
                         git add k8-manifests/deployment.yml
-                        git commit -m "Updated deployment file with build number ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                        git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
+                        git push https://\${GITHUB_TOKEN}@github.com/\${GIT_USER_NAME}/\${GIT_REPO_NAME} HEAD:main
                     '''
                 }
             }
         }
     }
 }
-
