--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -31,12 +31,12 @@ pipeline {
         }
         stage('Build and Push Docker Image') {
                 environment {
-                    DOCKER_IMAGE = 'royrishwanth/java-ci-cd-app:$BUILD_NUMBER'
+                    DOCKER_IMAGE = 'royrishwanth/java-ci-cd-app:${BUILD_NUMBER}'
                     REGISTRY_CREDENTIALS = credentials('docker-cred')
                 }
                 steps {
                     script {
-                        sh 'cd ultimate-pipeline/java && docker build -t $DOCKER_IMAGE .'
+                        sh 'cd ultimate-pipeline/java && docker build -t ${DOCKER_IMAGE} .'
                         def dockerImage = docker.image("${DOCKER_IMAGE}")
                         docker.withRegistry('https://index.docker.io/v1/', REGISTRY_CREDENTIALS) {
                             dockerImage.push() }
@@ -54,7 +54,7 @@ pipeline {
                     sh '''
                         git config user.email "royrishwanth@gmail.com"
                         git config user.name "Rishwanth Kothapalli"
-                        BUILD_NUMBER=\$(BUILD_NUMBER)
+                        BUILD_NUMBER=\${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/\${BUILD_NUMBER}/g" k8-manifests/deployment.yml
                         git add k8-manifests/deployment.yml
                         git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
