--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -49,20 +49,28 @@ pipeline {
                 }
             }
 */
-                    script {
-                        def dockerImageTag = "royrishwanth/java-ci-cd-app:${BUILD_NUMBER}"
-                        echo "Docker image tag: ${dockerImageTag}"
+                        script {
+                            def dockerImageTag = "royrishwanth/java-ci-cd-app:${BUILD_NUMBER}"
+                            echo "Docker image tag: ${dockerImageTag}"
 
-                        dir('ultimate-pipeline') {
-                            sh "docker build -t ${dockerImageTag} ."
+                            dir('ultimate-pipeline') {
+                                sh "docker build -t ${dockerImageTag} ."
+                            }
+
+                            echo 'Checking docker version...'
+                            sh "docker --version || true"
+
+                            echo 'Checking whoami...'
+                            sh "whoami || true"
+
+                            echo 'Checking docker login...'
+                            sh '''
+                            echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
+                            '''
+                            echo 'Pushing Docker image...'
+                            sh "docker push ${dockerImageTag}"
                         }
 
-                        echo 'Logging into Docker Hub...'
-                        sh "echo ${DOCKER_HUB_PASSWORD} | docker login -u ${DOCKER_HUB_USERNAME} --password-stdin"
-
-                        echo 'Pushing Docker image via shell...'
-                        sh "docker push ${dockerImageTag}"
-                    }
                 }
         }
         stage('Update Deplyment File')
