--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -56,17 +56,16 @@ pipeline {
                 GIT_USER_NAME = 'royrishwanth'
             }
             steps {
-                withCredentials([string(credentialsId: 'GITHUB_TOKEN', variable: 'GITHUB_TOKEN')]) {
-                    sh '''
-                        cd k8-manifests
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh """
                         git config user.email "royrishwanth@gmail.com"
                         git config user.name "Rishwanth Kothapalli"
                         BUILD_NUMBER=\${BUILD_NUMBER}
-                        sed -i "s/replaceImageTag/\${BUILD_NUMBER}/g" deployment.yml
-                        git add deployment.yml
+                        sed -i "s/replaceImageTag/\${BUILD_NUMBER}/g" k8-manifests/deployment.yml
+                        git add k8-manifests/deployment.yml
                         git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
                         git push https://\${GITHUB_TOKEN}@github.com/\${GIT_USER_NAME}/\${GIT_REPO_NAME} HEAD:main
-                    '''
+                    """
                 }
             }
         }
