Changes to app to staart http server and dockerfile chages

--- a/ultimate-pipeline/Dockerfile
+++ b/ultimate-pipeline/Dockerfile
@@ -2,11 +2,14 @@ FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
-# Copy source files
+# Copy project files
 COPY java/src/main/java/com/example/App.java ./App.java
 
-# Compile App.java
+# Compile the Java file
 RUN mkdir out && javac App.java -d out
 
-# Run the compiled class
+# Expose port for HTTP server
+EXPOSE 8080
+
+# Run the HTTP server
 CMD ["java", "-cp", "out", "com.example.App"]
