--- a/k8-manifests/deployment.yml
+++ b/k8-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: royrishwanth/java-ci-cd-app:35
+        image: royrishwanth/java-ci-cd-app:replaceImageTag
         ports:
         - containerPort: 8080
