--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -64,7 +64,7 @@ pipeline {
                                 git config user.email "royrishwanth@gmail.com"
                                 git config user.name "Rishwanth Kothapalli"
                                 BUILD_NUMBER=\${BUILD_NUMBER}
-                                sed -i "s/replaceImageTag/\${BUILD_NUMBER}/g" k8-manifests/deployment.yml
+                                sed -i "s|image: royrishwanth/java-ci-cd-app:.*|image: royrishwanth/java-ci-cd-app:${BUILD_NUMBER}|g" k8-manifests/deployment.yml
                                 git add k8-manifests/deployment.yml
                                 git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
                                 git push https://\${GITHUB_TOKEN}@github.com/\${GIT_USER_NAME}/\${GIT_REPO_NAME} HEAD:main
