--- a/ultimate-pipeline/JenkinsFile
+++ b/ultimate-pipeline/JenkinsFile
@@ -49,28 +49,26 @@ pipeline {
                 }
             }
 
-        stage('Update Deployment File') {
+        stage('Update Deployment File')
+        {
             environment {
                 GIT_REPO_NAME = 'Jenkins-cicd'
                 GIT_USER_NAME = 'royrishwanth'
             }
-                steps {
-                        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                            sh """
-                                    pwd
-                                    ls -la
-                                    git status
-                                git config --global --add safe.directory /var/lib/jenkins/workspace/first-try
-                                git config user.email "royrishwanth@gmail.com"
-                                git config user.name "Rishwanth Kothapalli"
-                                BUILD_NUMBER=\${BUILD_NUMBER}
-                                sed -i "s|image: royrishwanth/java-ci-cd-app:.*|image: royrishwanth/java-ci-cd-app:${BUILD_NUMBER}|g" k8-manifests/deployment.yml
-                                git add k8-manifests/deployment.yml
-                                git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
-                                git push https://\${GITHUB_TOKEN}@github.com/\${GIT_USER_NAME}/\${GIT_REPO_NAME} HEAD:main
-                            """
-                        }
+            steps {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh """
+                        git config --global --add safe.directory /var/lib/jenkins/workspace/first-try
+                        git config user.email "royrishwanth@gmail.com"
+                        git config user.name "Rishwanth Kothapalli"
+                        BUILD_NUMBER=\${BUILD_NUMBER}
+                        sed -i "s|image: royrishwanth/java-ci-cd-app:.*|image: royrishwanth/java-ci-cd-app:\${BUILD_NUMBER}|g" k8-manifests/deployment.yml
+                        git add k8-manifests/deployment.yml
+                        git commit -m "Updated deployment file with build number \${BUILD_NUMBER}"
+                        git push https://\${GITHUB_TOKEN}@github.com/\${GIT_USER_NAME}/\${GIT_REPO_NAME} HEAD:main
+                    """
                 }
+            }
         }
     }
 }
